# custom-rss

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.org
.cargo/: config.toml
src/: isabel.rs  main.rs  rss_utils.rs  verde.rs
